# co-reviewer

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: ci-cd.yml  create-tag.yml  publish.yml
co_reviewer/: __init__.py  api.py  cli.py  config.py  git_scanner.py  models.py  review_agent.py  reviewer.py
tests/: __init__.py  cli_test.py  config_test.py  git_scanner_test.py  review_agent_test.py  reviewer_test.py  test_git_scanner_test.py  test_reviewer_test.py
